--- a/Android/FamilyParking/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">FamilyParcking</string>
     <string name="title_activity_maps">Map</string>
+    <string name="parking">P</string>
+    <string name="add">+</string>
 
 </resources>
