--- a/Android/FamilyParking/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="parking">P</string>
     <string name="add">+</string>
     <string name="find_contact">Write name or email</string>
+    <string name="add_contact">Add contact to group ...</string>
+    <string name="back">BACK</string>
+    <string name="delete">DELETE</string>
 
 </resources>
