--- a/Android/FamilyParking2/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="action_groups">Group</string>
     <string name="action_cars">Cars</string>
     <string name="action_ghostmode">Ghostmode</string>
+    <string name="new_group">New Group</string>
+    <string name="new_car">New Car</string>
 
 </resources>
