--- a/Android/FamilyParking2/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="new_car">New Car</string>
     <string name="name_surname">Name and Surname</string>
     <string name="email">Email</string>
+    <string name="name_group">Insert group\'s name</string>
 
 </resources>
