--- a/Android/FamilyParking2/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="add_contact">Add contact to group ...</string>
     <string name="back">BACK</string>
     <string name="delete">DELETE</string>
+    <string name="modify">MODIFY</string>
     <string name="ok">OK</string>
     <string name="infoBeforeClose">Family Parking can not access your location. The application will be closed!</string>
     <string name="action_groups">Group</string>
@@ -20,5 +21,7 @@
     <string name="name_surname">Name and Surname</string>
     <string name="email">Email</string>
     <string name="name_group">Insert group\'s name</string>
+    <string name="car_model">Insert car\'s name and select a brand</string>
+    <string name="group_empty">No group is available!</string>
 
 </resources>
