--- a/Android/FamilyParking2/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="add_bluetooth">Add bluetooth device</string>
     <string name="remove_bluetooth">Remove bluetooth device</string>
     <string name="add_car">Create new car ...</string>
+    <string name="park_car">Parking car ...</string>
+    <string name="no_connection">No connection available!</string>
     <string name="back">BACK</string>
     <string name="code">Insert the code received by email</string>
     <string name="delete">DELETE</string>
