--- a/Android/FamilyParking2/app/src/main/res/values/strings.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="bluetooth">BLUETOOTH</string>
     <string name="tab_car">CARS</string>
     <string name="tab_create">CREATE</string>
+    <string name="no_car">Your car list is empty"</string>
+    <string name="update_car_list">Downloading cars information ..."</string>
 
     <string-array name="car_brands">
         <item><string name="no_brand">add_car</string></item>
