iOS facebook Login BugFix

--- a/iOS/FamilyParking/familyparking/it.lproj/Main.strings
+++ b/iOS/FamilyParking/familyparking/it.lproj/Main.strings
@@ -84,7 +84,7 @@
 "nto-n4-F6X.normalTitle" = "Avanti";
 
 /* Class = "UIButton"; normalTitle = "Confirm"; ObjectID = "p4F-GF-3XC"; */
-"p4F-GF-3XC.normalTitle" = "Conferma";
+"p4F-GF-3XC.normalTitle" = "Fatto";
 
 /* Class = "UIButton"; normalTitle = "Confirm"; ObjectID = "rnS-K6-YxA"; */
-"rnS-K6-YxA.normalTitle" = "Conferma";
+"rnS-K6-YxA.normalTitle" = "Fatto";
